fix spacing

--- a/CMS/static/css/crc.css
+++ b/CMS/static/css/crc.css
@@ -12982,12 +12982,12 @@ footer ul.footer-base-links li {
 
 footer ul.footer-base-links li a:focus {
     background: #04867B;
-    padding: 1rem 1rem 1rem 1rem;
+    padding: .75rem .75rem .75rem .75rem;
 }
 
 footer ul.footer-base-links li a:hover {
     background: #04867B;
-    padding: 1rem 1rem 1rem 1rem;
+    padding: .75rem .75rem .75rem .75rem;
 }
 
 footer ul.footer-base-links li a {
